--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+html,
+body {
+	font-family: "Baloo Tamma 2", cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+	box-sizing: border-box;
+}
+.app {
+	display: flex;
+	flex-direction: row;
+	min-height: 100vh;
+	flex-wrap: wrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.signup,
+.image-cont {
+	flex-basis: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.image-cont img {
+	height: 100vh;
+	width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.signup {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	background-color: rgba(82, 36, 208, 0.1);
+	background-color: #e8e8e8;
+	background-color: rgb(236, 97, 90, 0.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signup .logo {
+	width: 40px;
+	height: 40px;
+}
+
+.signup h1 {
+	margin-top: 10px;
+	text-transform: capitalize;
+}
+
+.signup form {
+	width: 60%;
+}
+
+.signup .form-group {
+	position: relative;
+}
+
+.signup label {
+	text-transform: uppercase;
+	font-size: 0.9em;
+	font-weight: 500;
+}
+.signup input {
+	display: block;
+	width: 100%;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	height: 35px;
+	padding: 10px;
+	margin-bottom: 15px;
+}
+
+.signup .validated.error::after {
+	content: "⨯";
+	color: red;
+	position: absolute;
+	right: 10px;
+	top: 25px;
+	font-size: 1.5em;
+}
+
+.signup span.error {
+	color: red;
+	margin-top: -7px;
+	display: block;
+	font-size: 0.85em;
+}
+
+.signup button {
+	margin: 30px 0;
+	width: 100%;
+	height: 40px;
+	color: white;
+	background-color: #5224d0;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	font-size: 1.3em;
+	font-family: inherit;
+}
+
+.signup .loader {
+	width: 40px;
+	height: 40px;
+}
+
+.toast-error {
+	color: white !important;
+}
+
+@media only screen and (max-width: 900px) {
+	.app {
+		flex-direction: row;
+	}
+	.app .image-cont {
+		flex-basis: 40%;
+	}
+	.app .signup {
+		flex-basis: 60%;
+	}
+}
+
+@media only screen and (max-width: 650px) {
+	.app {
+		flex-direction: column;
+	}
+	.image-cont img {
+		height: 30vh;
+	}
+	.app .signup,
+	.app .image-cont {
+		flex-basis: 100%;
+	}
 }
